feat(agents): make RequirementAgent stable (#1143)
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/experimental/requirement-agent.mdx
+++ b/docs/experimental/requirement-agent.mdx
@@ -41,8 +41,8 @@ This agent will:
 ```py Python
 import asyncio
 
-from beeai_framework.agents.experimental import RequirementAgent
-from beeai_framework.agents.experimental.requirements.conditional import (
+from beeai_framework.agents.requirement import RequirementAgent
+from beeai_framework.agents.requirement.requirements.conditional import (
     ConditionalRequirement,
 )
 from beeai_framework.backend import ChatModel
@@ -344,10 +344,8 @@ This example demonstrates how to write a requirement that prevents the agent fro
 ```py Python
 import asyncio
 
-from beeai_framework.agents.experimental import RequirementAgent
-from beeai_framework.agents.experimental.requirements import Requirement, Rule
-from beeai_framework.agents.experimental.requirements.requirement import run_with_context
-from beeai_framework.agents.experimental.types import RequirementAgentRunState
+from beeai_framework.agents.requirement import RequirementAgent, RequirementAgentRunState
+from beeai_framework.agents.requirement.requirements.requirement import Requirement, Rule, run_with_context
 from beeai_framework.backend import AssistantMessage, ChatModel
 from beeai_framework.context import RunContext
 from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
