--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -111,7 +111,7 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	{/* <!-- embedme python/examples/serve/a2a_server.py --> */}
 	```py Python
 	from beeai_framework.adapters.a2a import A2AServer, A2AServerConfig
-	from beeai_framework.agents.experimental import RequirementAgent
+	from beeai_framework.agents.requirement import RequirementAgent
 	from beeai_framework.backend import ChatModel
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.serve.utils import LRUMemoryManager
