--- a/docs/integrations/acp.mdx
+++ b/docs/integrations/acp.mdx
@@ -130,7 +130,7 @@ Basic example:
 {/* <!-- embedme python/examples/serve/acp.py --> */}
 ```py
 from beeai_framework.adapters.acp import ACPServer, ACPServerConfig
-from beeai_framework.agents.experimental import RequirementAgent
+from beeai_framework.agents.requirement import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.memory import UnconstrainedMemory
 from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
