--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -31,7 +31,7 @@ For more details, see the [Integrations page](/integrations).
 {/* <!-- embedme python/examples/serve/a2a_server.py --> */}
 ```python
 from beeai_framework.adapters.a2a import A2AServer, A2AServerConfig
-from beeai_framework.agents.experimental import RequirementAgent
+from beeai_framework.agents.requirement import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.memory import UnconstrainedMemory
 from beeai_framework.serve.utils import LRUMemoryManager
