--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -493,7 +493,7 @@ This tool requires a pre-populated vector store. Vector store population (loadin
 import asyncio
 import os
 
-from beeai_framework.agents.experimental import RequirementAgent
+from beeai_framework.agents.requirement import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.backend.document_loader import DocumentLoader
 from beeai_framework.backend.embedding import EmbeddingModel
