--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -182,7 +182,7 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	```py Python
 	from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
 	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformMemoryManager, BeeAIPlatformServer
-	from beeai_framework.agents.experimental import RequirementAgent
+	from beeai_framework.agents.requirement import RequirementAgent
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
 	from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
