--- a/docs/integrations/watsonx-orchestrate.mdx
+++ b/docs/integrations/watsonx-orchestrate.mdx
@@ -88,7 +88,7 @@ This enables you to register and use your local BeeAI agents as external agents 
 
 	```py Python
 	from beeai_framework.adapters.watsonx_orchestrate import WatsonxOrchestrateServer, WatsonxOrchestrateServerConfig
-	from beeai_framework.agents.experimental import RequirementAgent
+	from beeai_framework.agents.requirement import RequirementAgent
 	from beeai_framework.backend import ChatModel
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.serve.utils import LRUMemoryManager
