--- a/python/examples/notebooks/agents_colab.ipynb
+++ b/python/examples/notebooks/agents_colab.ipynb
@@ -100,7 +100,7 @@
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
     "from pydantic import BaseModel, Field\n",
     "\n",
-    "from beeai_framework.agents.experimental import RequirementAgent\n",
+    "from beeai_framework.agents.requirement import RequirementAgent\n",
     "from beeai_framework.backend.chat import ChatModel\n",
     "from beeai_framework.context import RunContext\n",
     "from beeai_framework.emitter.emitter import Emitter\n",
