--- a/docs/modules/agents.mdx
+++ b/docs/modules/agents.mdx
@@ -225,8 +225,8 @@ This agent provides the reliability needed for production scenarios through a ru
 Learn more about RequirementAgent in our [RequirementAgent documentation](../experimental/requirement-agent) and [blog post](https://beeai.dev/blog/reliable-ai-agents).
 
 ```py Python [expandable]
-from beeai_framework.agents.experimental import RequirementAgent
-from beeai_framework.agents.experimental.requirements.conditional import ConditionalRequirement
+from beeai_framework.agents.requirement import RequirementAgent
+from beeai_framework.agents.requirement.requirements.conditional import ConditionalRequirement
 from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
 from beeai_framework.tools.think import ThinkTool
 from beeai_framework.tools.weather import OpenMeteoTool
